# mcmc-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: diagnostics.rs  ess.rs  lib.rs  rhat.rs  utils.rs
